gnome-online-accounts (3.35.90-1) UNRELEASED; urgency=medium

  [ Laurent Bigonville ]
  * debian/rules, debian/gnome-online-accounts.install: Move the daemons to
    /usr/libexec now that this is allowed in the debian policy

  [ Sebastien Bacher ]
  * New upstream release
  * debian/control.in:
    - Build-Depends on libjavascriptcoregtk-4.0-dev
  * debian/libgoa-backend-1.0-1.symbols,
    debian/rules:
    - the 'pocket' provider has been removed upstream, don't try to build
      with it enabled

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 19 Feb 2020 10:07:20 +0100

gnome-online-accounts (3.34.1-1) unstable; urgency=medium

  * New upstream release
  * Build-Depend on debhelper-compat 12 and drop debian/compat
  * Bump Standards-Version to 4.4.1

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 19 Oct 2019 17:44:53 -0400

gnome-online-accounts (3.34.0-2) unstable; urgency=medium

  * Upload to unstable

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 21 Sep 2019 21:22:15 -0400

gnome-online-accounts (3.34.0-1) experimental; urgency=medium

  * New upstream release

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 13 Sep 2019 16:17:23 +0200

gnome-online-accounts (3.33.91-1) experimental; urgency=medium

  * New upstream release
    - owncloud: Use "Nextcloud", not "ownCloud", in user-visible errors
    - webview: Make it more flexible in terms of its size
    - kerberos: Use GTask's task data slot to leverage the compiler
    - daemon: Return a D-Bus error if AddAccount fails to list all providers
    - kerberos: Use GTask's task data slot to leverage the compiler
    - build: Support the use of g_autolist with GoaObject
    - Port to GTask from GSimpleAsyncResult
  * debian/rules: Disable fedora account system

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Thu, 22 Aug 2019 00:55:51 +0200

gnome-online-accounts (3.32.0-1) experimental; urgency=medium

  * New upstream release

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 03 Apr 2019 17:03:56 +0200
